added version 1.0.8